fix subcribe form

--- a/contact.html
+++ b/contact.html
@@ -220,16 +220,14 @@
         <div class="col-md-4 col-sm-12">
           <h6>Subscribe</h6>
           <p>Subscribe to get updates from us and our partners<br></p>
-          <form action="http://mrareco.createsend.com/t/d/s/kieth/" class="form--merge form--no-labels"
-                data-error="Please fill all fields correctly."
-                data-success="Thanks for signing up! Please check your inbox for confirmation email." id="subForm"
-                method="post" name="subForm">
-            <p><label for="fieldEmail">Email Address</label><br>
-              <input class="col-md-8 col-sm-6 validate-required validate-email" id="fieldEmail" name="cm-kieth-kieth"
-                     required="" type="email"></p>
-            <p>
-              <button type="submit">Go</button>
-            </p>
+          <form class="form--merge form--no-labels"
+                action="https://verichains.us20.list-manage.com/subscribe/post?u=f09bee6d6fd95647b2cecc9b1&amp;id=9424b7ff0a">
+            <label for="mce-EMAIL">Email Address </label>
+            <input type="email" value="" name="EMAIL" class="col-md-6 col-sm-6">
+            <div aria-hidden="true" class="hidden">
+              <input type="text" name="b_f09bee6d6fd95647b2cecc9b1_9424b7ff0a" tabindex="-1" value="">
+            </div>
+            <input type="submit" value="Subscribe" name="subscribe" class="button">
           </form>
         </div>
       </div>
