--- a/services.html
+++ b/services.html
@@ -289,11 +289,11 @@
         <div class="col-md-4 col-sm-12">
           <p>Please subscribe to get updates from us and our partners<br></p>
           <form class="form--merge form--no-labels"
-                action="https://gmail.us20.list-manage.com/subscribe/post?u=ed4e404ab273893fa5258cb43&amp;id=837bd76370">
+                action="https://verichains.us20.list-manage.com/subscribe/post?u=f09bee6d6fd95647b2cecc9b1&amp;id=9424b7ff0a">
             <label for="mce-EMAIL">Email Address </label>
             <input type="email" value="" name="EMAIL" class="col-md-6 col-sm-6">
             <div aria-hidden="true" class="hidden">
-              <input type="text" name="b_ed4e404ab273893fa5258cb43_837bd76370" tabindex="-1" value="">
+              <input type="text" name="b_f09bee6d6fd95647b2cecc9b1_9424b7ff0a" tabindex="-1" value="">
             </div>
             <input type="submit" value="Subscribe" name="subscribe" class="button">
           </form>
