--- a/vwallet.html
+++ b/vwallet.html
@@ -102,8 +102,12 @@
                                 <div class="row">
                                     <div class="col-sm-11">
                                         <h2>Wallet App and Services</h2>
-                                        <p class="lead">High-security Mobile Wallet and Business Wallet / Custody
-API services.</p>
+                                        <blockquote class="blockquote"><p class="mb-0">
+                                          ✓ High-Security Multi-Signature Wallet with 2FA/MFA authentication<br>
+                                          ✓ Enables businesses to integrate digital asset into portfolios securely at scale.<br>
+                                          ✓ Provide Risk Management policies, such as transaction and velocity limit, whitelist<br>
+                                          ✓ Simple API integration</p>
+                                        </blockquote>
                                     </div>
                                 </div>
                             </div>
