--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
               <h3><b>Trusted Crypto Wallet</b></h3>
               <blockquote class="blockquote"><p class="mb-0">
                 ✓ High-Security Multi-Signature Wallet with 2FA/MFA authentication<br>
-                ✓ Enables businesses to integrate digital asset into portfolios securely at scale.<br>
-                ✓ Provide Risk Management policies, such as transaction & velocity limit, whitelist ..<br>
+                ✓ Enables businesses to integrate digital asset into portfolios securely at scale<br>
+                ✓ Provide Risk Management policies, such as transaction & velocity limit, whitelist<br>
                 ✓ Simple API integration<br></p>
               </blockquote>
               <br>
