--- a/vwallet.html
+++ b/vwallet.html
@@ -104,7 +104,7 @@
                                         <h2>Wallet App and Services</h2>
                                         <blockquote class="blockquote"><p class="mb-0">
                                           ✓ High-Security Multi-Signature Wallet with 2FA/MFA authentication<br>
-                                          ✓ Enables businesses to integrate digital asset into portfolios securely at scale.<br>
+                                          ✓ Enables businesses to integrate digital asset into portfolios securely at scale<br>
                                           ✓ Provide Risk Management policies, such as transaction and velocity limit, whitelist<br>
                                           ✓ Simple API integration</p>
                                         </blockquote>
