edit blockchain page

--- a/blockchain.html
+++ b/blockchain.html
@@ -98,7 +98,11 @@
                                 <div class="row">
                                     <div class="col-sm-11">
                                         <h2>Blockchain Services</h2>
-                                        <p class="lead">We have delivered our training and consulting services to a number of high profile international organizations and goverments, including Fortune 500 clients.</p>
+                                        <blockquote class="blockquote"><p class="mb-0">
+                                          ✓ Blockchain data, CryptoCurrency Price & Historical Data API<br>
+                                          ✓ Wallet, Custody, Exchange, OTC marketplace products<br>
+                                          ✓ Blockchain consulting and development<br>
+                                        </p></blockquote>
                                     </div>
                                 </div>
                             </div>
@@ -136,7 +140,7 @@
                             </li>
                             <li>
                                 <div class="tab__title btn">
-                                    <span class="btn__text">Audit</span>
+                                    <span class="btn__text">Security Audit</span>
                                 </div>
                                 <div class="tab__content">
                                     <p>
