--- a/blockchain.html
+++ b/blockchain.html
@@ -24,7 +24,7 @@
   <nav>
     <div class="nav-bar" data-fixed-at="700">
       <div class="nav-module logo-module left">
-        <a href="index.html">
+        <a href="/">
           <div class="vnu"><img alt="logo" class="logo logo-dark" src="assets/images/logo.png"></div>
           <img alt="logo" class="logo logo-light" src="assets/images/logo.png"></a>
       </div>
