--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
             <div class="col-sm-8">
               <h3><b>Verichains Lab</b></h3>
               <blockquote class="blockquote"><p class="mb-0 text-justify">
-                World-class team with extensive research and development expertise in
-                the areas of security, machine learning and blockchain technology</p>
+                Our Lab has a world-class team with extensive research and development expertise in
+                the areas of security, AI and blockchain technology. Together we are driving technology &gt; forward!!</p>
               </blockquote>
               <br>
               <a class="btn btn-md" href="team.html">
