--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <meta property="og:title" content="Verichains">
+  <meta property="og:description" content="Verichains">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/">
+    
+  <title>Verichains</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
