update meta tags and keywords for pages

--- a/apollo.html
+++ b/apollo.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <title>Verichains - Apollo Decentralized Marketplace for Tokenized Assets</title>
+  <meta name="description" content="Apollo is a decentralized Marketplace for Tokenized Assets">
+  <meta name="keywords" content="decentralized Marketplace, Tokenized Asset, smart contract, multisig wallet, blockchain development">     
+  <meta property="og:title" content="Apollo Decentralized Marketplace for Tokenized Assets">
+  <meta property="og:description" content="Apollo is a decentralized Marketplace for Tokenized Assets">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/apollo.html">
+    
+  <title>Verichains - Apollo Decentralized Marketplace for Tokenized Assets</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
