--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">    
+  <meta property="og:title" content="Verichains - Contact Us">
+  <meta property="og:description" content="Contact us for any inquiries, questions or commendations">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/contact.html">
+    
   <title>Verichains - Contact Us</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
