--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">    
   <meta charset="utf-8">
   <meta property="og:title" content="Verichains">
-  <meta property="og:description" content="Verichains">
+  <meta property="og:description" content="Verichains - Driving Technology Forward">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/">
     
