--- a/partners.html
+++ b/partners.html
@@ -2,6 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">    
+  <meta name="description" content="We have delivered our training and consulting services to a number of high profile international organizations and goverments">
+  <meta name="keywords" content="decentralized Marketplace, Tokenized Asset, smart contract, multisig wallet, blockchain development"> 
+  <meta property="og:title" content="Verichains - Partners">
+  <meta property="og:description" content="List of Verichains clients and partners">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/partners.html">
+    
   <title>Verichains - Partners</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
