--- a/products.html
+++ b/products.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <title>Verichains - Products</title>
+  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security, tokenization, formal verification">    
+  <meta property="og:title" content="Verichains - Products">
+  <meta property="og:description" content="Verichains - Products">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/products.html">
+    
+  <title>Verichains - Products</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
