--- a/rk87.html
+++ b/rk87.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <title>Verichains - RK87 Formal Verification Tool for Smart Contracts</title>
+  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="keywords" content="security audit, smart contract, formal verification">    
+  <meta property="og:title" content="Verichains - RK87 Formal Verification Tool for Smart Contracts">
+  <meta property="og:description" content="RK87 is the only platform that allow user to do symbolic verifier using only solidity language and some small support directives">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/rk87.html">
+    
+  <title>Verichains - RK87 Formal Verification Tool for Smart Contracts</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
