--- a/team.html
+++ b/team.html
@@ -2,6 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="description" content="Verichains Lab has a world-class team with extensive research and development expertise in the areas of security, AI and blockchain technology">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">    
+  <meta property="og:title" content="Verichains - About us">
+  <meta property="og:description" content="Verichains Lab has a world-class team with extensive research and development expertise in the areas of security, AI and blockchain technology">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/team.html">
+    
   <title>Verichains - About us</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
