--- a/tesca.html
+++ b/tesca.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <title>Verichains - Tesca STO/ICO Platform</title>
+  <meta name="description" content="Tesca is an on-chain ICO/STO fund-raising platform with milestones voting">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security, tokenization, ico, sto">    
+  <meta property="og:title" content="Tesca STO/ICO Platform">
+  <meta property="og:description" content="Tesca is an on-chain ICO/STO fund-raising platform with milestones voting">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/tesca.html">
+    
+  <title>Verichains - Tesca STO/ICO Platform</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
