--- a/vwallet.html
+++ b/vwallet.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <title>Verichains - Trusted Multi-Signature Wallet</title>
+  <meta name="description" content="Verichains offers high-security Multi-Signature Wallet with 2FA/MFA authentication and Risk Management policies">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security, custody, business wallet">   
+  <meta property="og:title" content="Verichains - Trusted Multi-Signature Wallet">
+  <meta property="og:description" content="High-Security Multi-Signature Wallet with 2FA/MFA authentication and Risk Management policies">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/vwallet.html">
+    
+  <title>Verichains - Trusted Multi-Signature Wallet</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
