--- a/blockchain.html
+++ b/blockchain.html
@@ -1,8 +1,15 @@
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-          <title>Verichains - Blockchain Development and Security Audit Services</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">   
+  <meta property="og:title" content="Verichains - Blockchain Development and Security Audit Services">
+  <meta property="og:description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/blockchain.html">
+      
+  <title>Verichains - Blockchain Development and Security Audit Services</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
