--- a/careers.html
+++ b/careers.html
@@ -1,9 +1,15 @@
-
 <!doctype html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8">
-          <title>Verichains - Job Opportunities</title>
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">
+  <meta property="og:title" content="Verichains - Job Opportunities">
+  <meta property="og:description" content="Explore Job Opportunities at Verichains">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/careers.html">
+    
+  <title>Verichains - Job Opportunities</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
