--- a/security.html
+++ b/security.html
@@ -2,7 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-    <title>Verichains - Security Services</title>
+  <meta name="description" content="Verichains provides high quality security audit services">
+  <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security, firmware security, penetration testing">    
+  <meta property="og:title" content="Verichains - Security Services">
+  <meta property="og:description" content="Verichains provides high quality security audit services">
+  <meta property="og:image" content="assets/images/logo.png">
+  <meta property="og:url" content="/security.html">
+    
+  <title>Verichains - Security Services</title>
   <link rel="shortcut icon" type="image/png" href="favicon.ico"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="css/socicon.css" rel="stylesheet" type="text/css" media="all">
