update meta tags and keywords for pages

--- a/partners.html
+++ b/partners.html
@@ -7,7 +7,7 @@
   <meta name="description" content="We have delivered our training and consulting services to a number of high profile international organizations and goverments">
   <meta name="keywords" content="decentralized Marketplace, Tokenized Asset, smart contract, multisig wallet, blockchain development"> 
   <meta property="og:title" content="Verichains - Partners">
-  <meta property="og:description" content="List of Verichains clients and partners">
+  <meta property="og:description" content="Verichains has delivered our training and consulting services to several of international organizations and goverments clients and partners">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/partners.html">
     
