--- a/products.html
+++ b/products.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
+  <meta name="description" content="Verichains provides products and API for blockchain transactions, cryptocurrency price & historical data, multi-sig wallet, custody, exchange and tokenization OTC marketplace">
   <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security, tokenization, formal verification">    
   <meta property="og:title" content="Verichains - Products">
-  <meta property="og:description" content="Verichains - Products">
+  <meta property="og:description" content="Verichains provides products and API for blockchain transactions, cryptocurrency price & historical data, multi-sig wallet, custody, exchange and tokenization OTC marketplace">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/products.html">
     
