--- a/security.html
+++ b/security.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Verichains provides high quality security audit services">
   <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security, firmware security, penetration testing">    
   <meta property="og:title" content="Verichains - Security Services">
-  <meta property="og:description" content="Verichains provides high quality security audit services">
+  <meta property="og:description" content="Verichains provides world-class high quality security audit services for software, hardware and blockchain products">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/security.html">
     
