--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
   <meta name="keywords" content="wallet, security audit, smart contract, multisig wallet, blockchain development, hardware security">    
   <meta property="og:title" content="Verichains - Services">
-  <meta property="og:description" content="Verichains provides high quality blockchain and security audit services">
+  <meta property="og:description" content="Verichains provides high quality blockchain development and smart contract security audit service">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/services.html">
     
