add intro for rk87

--- a/rk87.html
+++ b/rk87.html
@@ -144,6 +144,30 @@
     </div>
   </section>
 
+  <section class="bg--secondary">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-10 col-sm-offset-1 text-justify">
+                <h4>Introduction</h4>
+                <p>
+                    RK87 is a symbolic platform for solidity smart contracts. User can add assertions and assumptions into existing solidity code base to let symbolic engine search for counterexamples or get verified.
+                    <br><br>
+                    RK87 is the only platform that allow user to do symbolic verifier using only solidity language and some small support directives.
+                </p>
+                <h4>How it works?</h4>
+                <p>
+                    RK87 first compiles solidity source code into symbolic represents, and then z3 symbolic execution engine will be used to perform analysis. Additional directives can be added to support declarations and verifications.
+                </p>
+                <h4>Directives</h4>
+                <p>
+                    Please refer to <a href="https://checksec.verichains.io/docs/introduce.html" target="_blank">RK87 Documentation</a> for examples and to learn more about all supported directives.
+                </p>
+            </div>
+        </div>
+
+    </div>
+  </section>
+    
   <section class="features features-6 bg--secondary">
     <div class="col-sm-8 col-sm-offset-2 text-center" style="margin-bottom: 48px">
       <h2>Publications</h2>
