--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <h3><b>Verichains Lab</b></h3>
               <blockquote class="blockquote"><p class="mb-0 text-justify">
                 Our Lab has a world-class team with extensive research and development expertise in
-                the areas of security, AI and blockchain technology. <br>Together, we are driving technology &gt; forward!!!</p>
+                the areas of security, AI and blockchain technology. <br>Together, we are driving technology &gt; forward!</p>
               </blockquote>
               <br>
               <a class="btn btn-md" href="team.html">
