--- a/team.html
+++ b/team.html
@@ -203,7 +203,7 @@
             <h5>Cuong Nguyen</h5>
             <p class="text-justify">
               Cuong Nguyen is head of Ho Chi Minh office. He graduated from the University of Economics Ho Chi Minh City
-              and have a lot of experience in business analysis, team management.
+              and has a lot of experience in business analysis, team management.
             </p>
           </div>
         </div>
@@ -245,8 +245,8 @@
             <img alt="pic" src="assets/images/team/vubach.jpg">
             <h6>VeriChains Vietnam, Mobile Developer</h6>
             <h5>Bach Vu</h5>
-            <p class="text-justify">Bach is a degree from Posts & Telecommunications Institute of Technology and has 5+
-              years of experience in Mobile Development, UI/UX Design. Past projects have include ios and android for
+            <p class="text-justify">Bach got Bachelor degree from Posts & Telecommunications Institute of Technology and has 5+
+              years of experience in Mobile Development, UI/UX Design. Past projects have include iOs and Android for
               mobile application, business analysis.</p>
           </div>
         </div>
@@ -267,7 +267,7 @@
             <img alt="pic" src="assets/images/team/hieunguyen.jpg">
             <h6>VeriChains Vietnam, Android Developer</h6>
             <h5>Hieu Nguyen</h5>
-            <p class="text-justify">Hieu is a android developer at Verichains</p>
+            <p class="text-justify">Hieu is a Android and Frontend Web developer at Verichains.</p>
           </div>
         </div>
         <div class="col-sm-6 col-xs-12 col-md-4">
