--- a/blockchain.html
+++ b/blockchain.html
@@ -139,7 +139,7 @@
                                 </div>
                                 <div class="tab__content">
                                     <p>
-                                        We could help you to design and implement your DApps, smart contracts, private or public blockchain and cryptography-based technologies to store immutable data in your products, institution or corporation.
+                                        We could help you to design and implement your dApps, smart contracts, private or public blockchain and cryptography-based technologies to store immutable data in your products, institution or corporation.
                                         <br><br>
                                         Please refer to <a href="products.html">Products</a> and <a href="https://vwallet.verichains.dev/api/" target="_blank">API documentations</a> for reference of our previous works.
                                     </p>
