--- a/rk87.html
+++ b/rk87.html
@@ -5,7 +5,7 @@
   <meta name="description" content="Verichains provides high quality blockchain development and smart contract security audit services">
   <meta name="keywords" content="security audit, smart contract, formal verification">    
   <meta property="og:title" content="Verichains - RK87 Formal Verification Tool for Smart Contracts">
-  <meta property="og:description" content="RK87 is the only platform that allow user to do symbolic verifier using only solidity language and some small support directives">
+  <meta property="og:description" content="RK87 is the only platform that allow user to do symbolic verifier using only Solidity language and some small support directives">
   <meta property="og:image" content="assets/images/logo.png">
   <meta property="og:url" content="/rk87.html">
     
@@ -150,13 +150,13 @@
             <div class="col-sm-10 col-sm-offset-1 text-justify">
                 <h4>Introduction</h4>
                 <p>
-                    RK87 is a symbolic platform for solidity smart contracts. User can add assertions and assumptions into existing solidity code base to let symbolic engine search for counterexamples or get verified.
+                    RK87 is a symbolic platform for Solidity smart contracts. User can add assertions and assumptions into existing Solidity code base to let symbolic engine search for counterexamples or get verified.
                     <br><br>
-                    RK87 is the only platform that allow user to do symbolic verifier using only solidity language and some small support directives.
+                    RK87 is the only platform that allow user to do symbolic verifier using only Solidity language and some small support directives.
                 </p>
                 <h4>How it works?</h4>
                 <p>
-                    RK87 first compiles solidity source code into symbolic represents, and then z3 symbolic execution engine will be used to perform analysis. Additional directives can be added to support declarations and verifications.
+                    RK87 first compiles Solidity source code into symbolic represents, and then Z3 symbolic execution engine will be used to perform analysis. Additional directives can be added to support declarations and verifications.
                 </p>
                 <h4>Directives</h4>
                 <p>
