--- a/vwallet.html
+++ b/vwallet.html
@@ -184,7 +184,7 @@
           <div class="feature feature-1">
             <i class="icon icon-Fox"></i>
             <h5>Metamask Integration</h5>
-            <p>The VWallet app works like a hardware wallet. All transactions, contract calls, dApp integrations</p>
+            <p>The vWallet app works like a hardware wallet. All transactions, contract calls, dApp integrations</p>
           </div>
         </div>
       </div>
