update vwallet typo

--- a/vwallet.html
+++ b/vwallet.html
@@ -172,7 +172,7 @@
           <div class="feature feature-1">
             <i class="icon icon-Bell"></i>
             <h5>Real-time Notificaiton</h5>
-            <p>Notify users whenever their balance has updated, their trades have executed</p>
+            <p>Notify users whenever their balance has updated or their trade on exchanges has executed</p>
           </div>
         </div>
         <div class="col-md-3 col-sm-6 col-xs-6 col-md-push-2">
@@ -184,7 +184,7 @@
           <div class="feature feature-1">
             <i class="icon icon-Fox"></i>
             <h5>Metamask Integration</h5>
-            <p>The VWallet app works like a hardware wallet. All transactions, contract calls, dApp integrations</p>
+            <p>The VWallet app works like a hardware wallet to authorize and sign for transactions, contract calls and dApp interactions</p>
           </div>
         </div>
       </div>
