update vwallet background

--- a/vwallet.html
+++ b/vwallet.html
@@ -184,7 +184,7 @@
           <div class="feature feature-1">
             <i class="icon icon-Fox"></i>
             <h5>Metamask Integration</h5>
-            <p>The vWallet app works like a hardware wallet to authorize and sign for transactions, contract calls and DApps interactions</p>
+            <p>The vWallet app works like a hardware wallet to authorize and sign for transactions, contract calls and dApps interactions</p>
           </div>
         </div>
       </div>
