reduce image size

--- a/rk87.html
+++ b/rk87.html
@@ -177,7 +177,7 @@
         <div class="col-sm-7">
           <a href="https://conference.hitb.org/hitbsecconf2018pek/sessions/rk87-a-smart-contract-verification-tool/"
              target="_blank">
-            <img alt="pic" src="assets/images/smartcontract.png">
+            <img alt="pic" src="assets/images/smartcontract.jpg">
           </a>
         </div>
         <div class="col-sm-5">
