--- a/rk87.html
+++ b/rk87.html
@@ -102,7 +102,7 @@
   <section class="imageblock about-2 bg--dark">
     <div class="imageblock__content col-md-6 col-sm-4 pos-left">
       <div class="background-image-holder">
-        <img alt="image" src="assets/images/rk87-bg.jpg">
+        <img alt="image" src="assets/images/rk87-bg.png">
       </div>
     </div>
     <div class="container">
