unify: dApp -> DApps

--- a/blockchain.html
+++ b/blockchain.html
@@ -139,7 +139,7 @@
                                 </div>
                                 <div class="tab__content">
                                     <p>
-                                        We could help you to design and implement your dApps, smart contracts, private or public blockchain and cryptography-based technologies to store immutable data in your products, institution or corporation.
+                                        We could help you to design and implement your DApps, smart contracts, private or public blockchain and cryptography-based technologies to store immutable data in your products, institution or corporation.
                                         <br><br>
                                         Please refer to <a href="products.html">Products</a> and <a href="https://vwallet.verichains.dev/api/" target="_blank">API documentations</a> for reference of our previous works.
                                     </p>
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="tab__content">
                                     <p>
-                                        We provide security audit services and formally verified audits for your blockchain implementation, consensus protocol, smart contracts and dApps using industry-standard security patterns and best practices. 
+                                        We provide security audit services and formally verified audits for your blockchain implementation, consensus protocol, smart contracts and DApps using industry-standard security patterns and best practices. 
                                         <br><br>
                                         We have been selected as audit partner for various successful blockchain projects such as Kyber Network, Request Network, QuarkChain, Sentinel Protocol, Joyso, Tomochain.
                                         <br><br>
