--- a/security.html
+++ b/security.html
@@ -154,7 +154,7 @@
                                 </div>
                                 <div class="tab__content">
                                     <p>
-                                        We provide security audit services and formally verified audits for your blockchain implementation, consensus protocol, smart contracts and dApps using industry-standard security patterns and best practices. 
+                                        We provide security audit services and formally verified audits for your blockchain implementation, consensus protocol, smart contracts and DApps using industry-standard security patterns and best practices. 
                                         <br><br>
                                         We have been selected as audit partner for various successful blockchain projects such as Kyber Network, Request Network, QuarkChain, Sentinel Protocol, Joyso, Tomochain.. Please contact us for sample audit reports.
                                         <br><br>
