add contact us to rk87

--- a/rk87.html
+++ b/rk87.html
@@ -167,6 +167,19 @@
 
     </div>
   </section>
+
+    <section class="">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-11 col-sm-offset-0 text-center">
+                    <h4>Are you looking for Smart Contract Security Audit Services? </h4>
+                    <a class="btn-md" href="contact.html">
+                        <span class="btn btn-primary">Contact us</span>
+                    </a> 
+                </div>
+            </div>	
+        </div>	
+    </section>    
     
   <section class="features features-6 bg--secondary">
     <div class="col-sm-8 col-sm-offset-2 text-center" style="margin-bottom: 48px">
