temporary remove mmask demo

--- a/vwallet.html
+++ b/vwallet.html
@@ -342,7 +342,7 @@
     </div>
 
   </section>
-  <section class="embedded-video-3 bg--secondary">
+  <!--section class="embedded-video-3 bg--secondary">
     <div class="container">
       <div class="row">
         <div class="col-md-5 col-sm-6">
@@ -358,7 +358,23 @@
 
     </div>
 
+  </section-->
+  <section class="embedded-video-3 bg--secondary">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5 col-sm-6">
+          <div class="text">
+            <h3>Safe Wallet</h3>
+
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-offset-1">
+          <iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/S2y6Wf3gDsQ"></iframe>
+        </div>
+      </div>
+    </div>
   </section>
+    
   <section class="embedded-video-3">
     <div class="container">
       <div class="row">
@@ -375,21 +391,7 @@
       </div>
     </div>
   </section>
-  <section class="embedded-video-3 bg--secondary">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5 col-sm-6">
-          <div class="text">
-            <h3>Safe Wallet</h3>
 
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-offset-1">
-          <iframe allowfullscreen="allowfullscreen" src="https://www.youtube.com/embed/S2y6Wf3gDsQ"></iframe>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <footer class="bg--white footer-1">
     <div class="container">
