--- a/rk87.html
+++ b/rk87.html
@@ -99,7 +99,7 @@
 </div>
 
 <div class="main-container">
-  <section class="imageblock about-2 bg--dark">
+  <section class="imageblock height-70 about-2 bg--dark">
     <div class="imageblock__content col-md-6 col-sm-4 pos-left">
       <div class="background-image-holder">
         <img alt="image" src="assets/images/rk87-bg.png">
