--- a/contact.html
+++ b/contact.html
@@ -165,7 +165,7 @@
             src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/21/Flag_of_Vietnam.svg/2000px-Flag_of_Vietnam.svg.png"
             height="48">
         <h4>Ho Chi Minh Office</h4>
-        <p>E.TOWN CENTRAL<br>11 Doan Van Bo, Ward 12<br> District 4, Ho Chi Minh City, Vietnam</p>
+        <p>WeWork E.Town Central<br>11 Doan Van Bo, Ward 12<br> District 4, Ho Chi Minh City, Vietnam</p>
       </div>
     </div>
     <div class="feature bg--secondary col-md-4 text-center hanoi-background location">
