add klaytn as partner

--- a/index.html
+++ b/index.html
@@ -235,6 +235,7 @@
         </a>
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
         <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
   </section>
@@ -288,6 +289,7 @@
       <li class="row">
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
         <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
   </section>
