--- a/partners.html
+++ b/partners.html
@@ -232,19 +232,30 @@
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
-          <div class="card card-1">
+          <div class="card card-1" style="margin-top: 35px">
             <div class="card__image">
-              <img alt="Pic" src="assets/images/partners/blockcelerate.png">
+              <a href="https://www.klaytn.com/" target="_blank">
+              <img alt="Pic" src="assets/images/partners/klaytn.png">
+                </a>
             </div>
-
           </div>
         </div>
         <div class="col-md-4 col-sm-6">
           <div class="card card-1" style="margin-top: 35px">
             <div class="card__image">
+              <a href="http://polarisec.com/" target="_blank">
               <img alt="Pic" src="assets/images/partners/polaris.png">
+              </a>
             </div>
-
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4 col-sm-6">
+          <div class="card card-1">
+            <div class="card__image">
+              <img alt="Pic" src="assets/images/partners/blockcelerate.png">
+            </div>
           </div>
         </div>
       </div>
