--- a/security.html
+++ b/security.html
@@ -256,6 +256,7 @@
         </a>
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
         <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
   </section>
@@ -309,6 +310,7 @@
       <li class="row">
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
         <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
   </section>
