--- a/blockchain.html
+++ b/blockchain.html
@@ -223,6 +223,7 @@
         </a>
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
         <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
   </section>
@@ -276,6 +277,7 @@
       <li class="row">
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
         <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
   </section>
