--- a/services.html
+++ b/services.html
@@ -191,6 +191,7 @@
         </a>
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
         <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
   </section>
@@ -244,6 +245,7 @@
       <li class="row">
         <img alt="Pic" src="assets/images/partners/blockcelerate.png">
         <img alt="Pic" src="assets/images/partners/polaris.png">
+        <img alt="Pic" src="assets/images/partners/klaytn.png">
       </li>
     </ul>
   </section>
