Add Quoc Anh Remove unused image

--- a/team.html
+++ b/team.html
@@ -304,6 +304,17 @@
             </p>
           </div>
         </div>
+        <div class="col-sm-6 col-xs-12 col-md-4">
+          <div class="member member-1">
+            <img alt="pic" src="assets/images/team/anhnguyen.jpeg">
+            <h6>VeriChains Vietnam, Business Analyst</h6>
+            <h5>Anh Nguyen-Quoc</h5>
+            <p class="text-justify">
+              Sometimes, the ordinary can make you extraordinary. With the experience as a Business Analyst, Quoc Anh yearns to bring
+              a wind of change to Verichains.
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
