--- a/team.html
+++ b/team.html
@@ -157,14 +157,15 @@
             <img alt="pic" src="assets/images/team/kaijern.jpg">
             <h6>VeriChains Lab, Researcher</h6>
             <h5>Kaijern Lau</h5>
-            <p class="text-justify"><a href="https://www.linkedin.com/in/kaijern-lau-8a847417" target="_blank">KaiJern,
-              Lau</a> is Director
-              of The Shepherd Lab by JD.com Security. He was a senior security researcher at Radio Security Department
-              of Qihoo 360 Technology, a core member of UnicornTeam and also HITB core crew. His research topic mainly
-              on hardware and software of embedded device, reverse engineering, and various security topics. He
-              presented his findings in different international security conferences like HITB, Codegate, QCon, KCon,
-              International Antivirus Conference and etc. He is also the review board member for HITB security
-              conference.</p>
+            <p class="text-justify">	    
+	      <a href="https://www.linkedin.com/in/kaijern-lau-8a847417" target="_blank">KaiJern (xwings)</a>, is Lab 
+		Director of The ShepherdLab, of JD.com Security. His research topic mainly on embedded device, hardware 
+		security, blockchain security, reverse engineering and various security topics. He presented his findings 
+		in different international security conferences like Defcon, HITB, Codegate, QCon, KCon, Brucon, H2HC and 
+		etc. He conducted hardware Hacking course in various places around the globe. He is also the owner of 
+		hackersbadge.com, actively involved in Unicorn (<a href="https://unicorn-engine.org">
+		https://unicorn-engine.org</a>) development and founder of Qiling Framework 
+		(<a href="https://qiling.io">https://qiling.io</a>)</p>
           </div>
         </div>
         <div class="col-sm-6 col-xs-12 col-md-4">
